A very strange bug has been squashed.

--- a/app/static/features/20-years/_styles.sass
+++ b/app/static/features/20-years/_styles.sass
@@ -1073,12 +1073,6 @@ html
     font-size: 10px
     bottom: 14px
 
-  #header,
-  #footer
-    &:before
-      mix-blend-mode: normal
-      border-color: rgba($color-dk, 0.1)
-
   #header
     line-height: 72px
     height: 72px
